--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -26,6 +26,7 @@
             .then(response => {
                 if (response.ok) {
                     alert('Product added successfully!');
+                    console.log(jsonData) 
                     form.reset();
                 } else {
                     alert('Failed to add product.');
