--- a/src/main/resources/templates/clothingProductsPage.html
+++ b/src/main/resources/templates/clothingProductsPage.html
@@ -9,6 +9,34 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 />
+<script>
+   
+    function addToPanier(productId) {
+        const quantity = 1; // Default quantity set to 2
+
+        // Send a POST request to the backend to add the product to the panier
+        fetch(`/api/panier/add-to-panier?productId=${productId}&quantite=${quantity}`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        })
+        .then(response => {
+            if (response.ok) {
+                alert("Product added to panier successfully!");
+            } else {
+                alert("Failed to add product to panier.");
+            }
+        })
+        .catch(error => {
+            console.error("Error:", error);
+            alert("An error occurred while adding the product to the panier.");
+        });
+    }
+
+
+   
+</script>
 </head>
 <body>
      
